Frontend para CURSOS Y CALIFICACIONES agregado

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<!-- Barra de navegación -->
-	<nav th:replace="navbar :: navbar"></nav>
+	<nav th:replace="~{navbar :: navbar}"></nav>
 
 	<!-- Sección principal -->
 	<div class="container-fluid">
