--- a/src/main/resources/templates/moduloProfesor/editarProfesor.html
+++ b/src/main/resources/templates/moduloProfesor/editarProfesor.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Editar Estudiante</title>
+<title>Editar Profesor</title>
 <!-- Agregar enlaces a los estilos de Bootstrap -->
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -17,14 +17,14 @@
 	
 	<div class="container">
 		<h1>
-			Editar Estudiante ID: <span th:text="${estudiante.idEstudiante}"></span>
+			Editar Profesor ID: <span th:text="${profesor.idProfesor}"></span>
 		</h1>
-		<form action="#" th:action="@{/estudiantes/guardar}"
-			th:object="${estudiante}" method="POST">
-			<input type="hidden" th:field="*{idEstudiante}" />
+		<form action="#" th:action="@{/profesores/guardar}"
+			th:object="${profesor}" method="POST">
+			<input type="hidden" th:field="*{idProfesor}" />
 			<div class="form-group">
-				<label for="idEstudiante">ID:</label> <input type="text"
-					class="form-control" id="idEstudiante" th:field="*{idEstudiante}" />
+				<label for="idProfesor">ID:</label> <input type="text"
+					class="form-control" id="idProfesor" th:field="*{idProfesor}" />
 			</div>
 			<div class="form-group">
 				<label for="nombre">Nombre:</label> <input type="text"
@@ -43,7 +43,7 @@
 					class="form-control" id="contrasena" th:field="*{contrasena}" />
 			</div>
 			<button type="submit" class="btn btn-primary">Guardar</button>
-			<a href="/estudiantes/listar" class="btn btn-danger">Cancelar</a>
+			<a href="/profesores/listar" class="btn btn-danger">Cancelar</a>
 		</form>
 	</div>
 
