--- a/src/main/resources/templates/moduloProfesor/nuevoProfesor.html
+++ b/src/main/resources/templates/moduloProfesor/nuevoProfesor.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agregar Estudiante</title>
+<title>Agregar Profesor</title>
 <!-- Agregar enlaces a los estilos de Bootstrap -->
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -16,12 +16,12 @@
 	<div th:replace="~{flash :: flash}"></div>
 	
 	<div class="container">
-		<h1>Agregar Estudiante</h1>
-		<form action="#" th:action="@{/estudiantes/guardar}"
-			th:object="${estudiante}" method="POST">
+		<h1>Agregar Profesor</h1>
+		<form action="#" th:action="@{/profesores/guardar}"
+			th:object="${profesor}" method="POST">
 			<div class="form-group">
-				<label for="idEstudiante">ID:</label> <input type="text"
-					class="form-control" id="idEstudiante" th:field="*{idEstudiante}" />
+				<label for="idProfesor">ID:</label> <input type="text"
+					class="form-control" id="idProfesor" th:field="*{idProfesor}" />
 			</div>
 			<div class="form-group">
 				<label for="nombre">Nombre:</label> <input type="text"
@@ -39,7 +39,7 @@
 				<label for="contraseña">Contraseña:</label> <input type="password"
 					class="form-control" id="contraseña" th:field="*{contrasena}" />
 			</div>
-			<a th:href="@{/estudiantes/listar}" class="btn btn-secondary">Volver</a>
+			<a th:href="@{/profesores/listar}" class="btn btn-secondary">Volver</a>
 			<button type="submit" class="btn btn-primary">Guardar</button>
 		</form>
 	</div>
