--- a/src/main/resources/templates/moduloInscripcion/listarInscripciones.html
+++ b/src/main/resources/templates/moduloInscripcion/listarInscripciones.html
@@ -22,7 +22,7 @@
                 <h1 class="title">Listar Inscripciones</h1>
             </div>
             <div class="col-md-6 text-right">
-                <a th:href="@{/inscripciones/agregar}" class="btn btn-primary">Agregar Calificación</a>
+                <a th:href="@{/inscripciones/agregar}" class="btn btn-primary">Agregar Inscripción</a>
             </div>
         </div>
         
