--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
 	<div>
-		<a class="navbar-brand" th:href="@{/}"> <img src="/img/logo.png" alt="Logo" width="50"> TEAM8 </a>
+		<a class="navbar-brand" th:href="@{/home}	"> <img src="/img/logo.png" alt="Logo" width="50"> TEAM8 </a>
 	</div>
 	
 	<!-- 	Lado derecho -->
@@ -42,8 +42,11 @@
 						<a class="dropdown-item" href="#">Idioma 2</a>
 					</div>
 				</li>
-				<li class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/login}">Iniciar sesión</a></li>
+				<li th:if="${username != null}" class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
+				<li th:if="${username != null}" class="nav-item"><a class="nav-link" th:href="@{/login}">Iniciar sesión</a></li>
+				<li th:unless="${username}" class="nav-item">
+					<a class="nav-link" th:href="@{/logout}">Logout</a>
+				</li>
 			</ul>
 		</div>
 	</div>
